--- a/CooperationApp/Views/SecondTabbar.storyboard
+++ b/CooperationApp/Views/SecondTabbar.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -14,20 +14,20 @@
             <objects>
                 <viewController storyboardIdentifier="SecondTabbarViewController" id="Y6W-OH-hqX" customClass="SecondTabbarViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2pe-Tf-eXd">
-                                <rect key="frame" x="15" y="59" width="97" height="31"/>
+                                <rect key="frame" x="15" y="58.999999999999993" width="96.666666666666671" height="30.666666666666664"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQv-QX-aHZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="53" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="53" height="30.666666666666668"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pyd-wL-neV">
-                                        <rect key="frame" x="53" y="0.0" width="44" height="31"/>
+                                        <rect key="frame" x="53" y="0.0" width="43.666666666666657" height="30.666666666666668"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="chevron.down" catalog="system"/>
@@ -35,46 +35,46 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lzD-jb-PLt">
-                                <rect key="frame" x="15" y="110" width="384" height="20.5"/>
+                                <rect key="frame" x="15" y="109.66666666666667" width="360" height="20.333333333333329"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wOc-Jr-K0C">
-                                        <rect key="frame" x="0.0" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="44.666666666666664" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="월" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRY-BW-PSk">
-                                        <rect key="frame" x="56" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="52.666666666666671" y="0.0" width="44.333333333333329" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="화" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rz-JU-sAp">
-                                        <rect key="frame" x="112" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="105" y="0.0" width="44.666666666666657" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Zp-lY-zfR">
-                                        <rect key="frame" x="168" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="157.66666666666666" y="0.0" width="44.666666666666657" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="목" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0BH-NW-h0S">
-                                        <rect key="frame" x="224" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="210.33333333333334" y="0.0" width="44.666666666666657" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="금" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xak-GY-uxq">
-                                        <rect key="frame" x="280" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="263" y="0.0" width="44.333333333333314" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="토" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqN-gY-ohy">
-                                        <rect key="frame" x="336" y="0.0" width="48" height="20.5"/>
+                                        <rect key="frame" x="315.33333333333331" y="0.0" width="44.666666666666686" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -82,7 +82,7 @@
                                 </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S0X-Qd-rlZ">
-                                <rect key="frame" x="15" y="140.5" width="384" height="308"/>
+                                <rect key="frame" x="15" y="140" width="360" height="308"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="308" id="CdC-3K-ksC"/>
@@ -105,33 +105,69 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GT3-qp-sy5">
+                                <rect key="frame" x="0.0" y="448" width="390" height="2"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="LC9-MJ-FeK"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="P0e-rO-ffs">
+                                <rect key="frame" x="0.0" y="458" width="390" height="303"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wKX-Ey-o2Q">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="7vR-OK-6z8">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="SrD-j1-7bx">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="top" secondItem="lzD-jb-PLt" secondAttribute="bottom" constant="10" id="1We-aS-Ka6"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="P0e-rO-ffs" secondAttribute="bottom" id="21l-fq-xBq"/>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="trailing" secondItem="lzD-jb-PLt" secondAttribute="trailing" id="8FK-h3-lux"/>
+                            <constraint firstItem="P0e-rO-ffs" firstAttribute="top" secondItem="GT3-qp-sy5" secondAttribute="bottom" constant="8" symbolic="YES" id="BMx-Pd-u1t"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="lzD-jb-PLt" secondAttribute="trailing" constant="15" id="Bb7-cg-jih"/>
+                            <constraint firstItem="GT3-qp-sy5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Dzo-O8-Tz8"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="ESU-eh-Qyj"/>
                             <constraint firstItem="2pe-Tf-eXd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="15" id="EYV-iT-kwm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GT3-qp-sy5" secondAttribute="trailing" id="PAp-QT-kIT"/>
                             <constraint firstItem="lzD-jb-PLt" firstAttribute="top" secondItem="2pe-Tf-eXd" secondAttribute="bottom" constant="20" id="R8Q-UJ-LR4"/>
                             <constraint firstItem="S0X-Qd-rlZ" firstAttribute="leading" secondItem="lzD-jb-PLt" secondAttribute="leading" id="f8d-YU-BtT"/>
+                            <constraint firstItem="P0e-rO-ffs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ifr-vp-7Mb"/>
                             <constraint firstItem="2pe-Tf-eXd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="ls5-o7-bYw"/>
+                            <constraint firstItem="GT3-qp-sy5" firstAttribute="top" secondItem="S0X-Qd-rlZ" secondAttribute="bottom" id="nYL-8I-ySg"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="P0e-rO-ffs" secondAttribute="trailing" id="yaU-Nu-0Rv"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="calendar" catalog="system" id="VMU-S3-f07"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="betweenCaledarScheduleView" destination="GT3-qp-sy5" id="092-V2-xeF"/>
                         <outlet property="calendarView" destination="S0X-Qd-rlZ" id="ade-KU-Hul"/>
                         <outlet property="calendarViewHeight" destination="CdC-3K-ksC" id="oHo-wJ-JRH"/>
                         <outlet property="dateLabel" destination="fQv-QX-aHZ" id="tab-k5-T89"/>
                         <outlet property="dateStackView" destination="2pe-Tf-eXd" id="ZNU-9b-EKj"/>
+                        <outlet property="scheduleView" destination="P0e-rO-ffs" id="HyQ-jj-46U"/>
                         <outlet property="weekStackView" destination="lzD-jb-PLt" id="Vzy-iR-bgE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="524.63768115942037" y="62.946428571428569"/>
+            <point key="canvasLocation" x="1011" y="162"/>
         </scene>
     </scenes>
     <resources>
@@ -139,6 +175,9 @@
         <image name="chevron.down" catalog="system" width="128" height="72"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
