--- a/ToyProjectManagementApp/Views/Cell/ProjectCardCell.xib
+++ b/ToyProjectManagementApp/Views/Cell/ProjectCardCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ProjectCardCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProjectCardCell" rowHeight="93" id="HTn-zG-OtX" customClass="ProjectContentTableViewCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="93"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ProjectCardCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProjectCardCell" rowHeight="77" id="HTn-zG-OtX" customClass="ProjectContentTableViewCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ProjectContetnCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HTn-zG-OtX" id="XJA-nV-Oq5">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="93"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ProjectContentCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HTn-zG-OtX" id="XJA-nV-Oq5">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5M-O0-onQ">
-                        <rect key="frame" x="20" y="20" width="20" height="20"/>
+                        <rect key="frame" x="20" y="14" width="20" height="20"/>
                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="F5M-O0-onQ" secondAttribute="height" id="K1K-zd-7Hx"/>
@@ -28,19 +28,19 @@
                         <buttonConfiguration key="configuration" style="plain" buttonSize="medium"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="card Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOh-W6-ug4">
-                        <rect key="frame" x="54" y="20" width="302" height="18.666666666666671"/>
+                        <rect key="frame" x="54" y="13.999999999999998" width="302" height="20.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dm6-lY-CN5">
-                        <rect key="frame" x="54" y="52.666666666666664" width="37.666666666666657" height="20.333333333333336"/>
+                        <rect key="frame" x="54" y="42.666666666666664" width="37.666666666666657" height="20.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfJ-J4-iUP">
-                        <rect key="frame" x="364" y="20" width="30" height="20"/>
+                        <rect key="frame" x="364" y="14" width="30" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="926-PB-ipY"/>
                             <constraint firstAttribute="width" constant="30" id="Tjs-Jj-IUF"/>
@@ -50,25 +50,26 @@
                         <buttonConfiguration key="configuration" style="plain" image="ellipsis" catalog="system"/>
                     </button>
                 </subviews>
+                <color key="backgroundColor" red="0.99481139520202022" green="0.99481139520202022" blue="0.99481139520202022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstItem="dm6-lY-CN5" firstAttribute="leading" secondItem="sOh-W6-ug4" secondAttribute="leading" id="2H7-2w-D53"/>
-                    <constraint firstItem="F5M-O0-onQ" firstAttribute="top" secondItem="XJA-nV-Oq5" secondAttribute="top" constant="20" id="3Qx-0o-m4n"/>
+                    <constraint firstItem="F5M-O0-onQ" firstAttribute="top" secondItem="XJA-nV-Oq5" secondAttribute="top" constant="14" id="3Qx-0o-m4n"/>
                     <constraint firstItem="jfJ-J4-iUP" firstAttribute="leading" secondItem="sOh-W6-ug4" secondAttribute="trailing" constant="8" id="7xY-xg-pNt"/>
                     <constraint firstAttribute="trailing" secondItem="jfJ-J4-iUP" secondAttribute="trailing" constant="20" id="K3a-SJ-g6Q"/>
-                    <constraint firstItem="dm6-lY-CN5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sOh-W6-ug4" secondAttribute="bottom" constant="14" id="UtK-ee-cUY"/>
+                    <constraint firstItem="dm6-lY-CN5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="sOh-W6-ug4" secondAttribute="bottom" constant="8" id="UtK-ee-cUY"/>
                     <constraint firstItem="F5M-O0-onQ" firstAttribute="leading" secondItem="XJA-nV-Oq5" secondAttribute="leading" constant="20" id="cxe-tD-Nud"/>
-                    <constraint firstAttribute="bottom" secondItem="dm6-lY-CN5" secondAttribute="bottom" constant="20" id="f6o-Kg-pVk"/>
+                    <constraint firstAttribute="bottom" secondItem="dm6-lY-CN5" secondAttribute="bottom" constant="14" id="f6o-Kg-pVk"/>
                     <constraint firstItem="sOh-W6-ug4" firstAttribute="top" secondItem="F5M-O0-onQ" secondAttribute="top" id="faV-Zi-SWD"/>
                     <constraint firstItem="jfJ-J4-iUP" firstAttribute="top" secondItem="F5M-O0-onQ" secondAttribute="top" id="raB-bO-mBb"/>
                     <constraint firstItem="sOh-W6-ug4" firstAttribute="leading" secondItem="F5M-O0-onQ" secondAttribute="trailing" constant="14" id="vEt-PX-sTq"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="cardColor" destination="F5M-O0-onQ" id="xeI-nA-553"/>
+                <outlet property="cardColor" destination="F5M-O0-onQ" id="OJr-1C-Zr5"/>
                 <outlet property="contentLabel" destination="sOh-W6-ug4" id="ugx-YR-D1X"/>
                 <outlet property="timeLabel" destination="dm6-lY-CN5" id="8UQ-mR-T0e"/>
             </connections>
-            <point key="canvasLocation" x="-26.153846153846153" y="-3.9099526066350707"/>
+            <point key="canvasLocation" x="-26.153846153846153" y="-9.5971563981042642"/>
         </tableViewCell>
     </objects>
     <resources>
