--- a/ToyProjectManagementApp/Views/CardColorUIView.xib
+++ b/ToyProjectManagementApp/Views/CardColorUIView.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailColorView" customModule="ToyProjectManagementApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="alF-72-IFl" customClass="DetailColorView" customModule="ToyProjectManagementApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="alF-72-IFl">
             <rect key="frame" x="0.0" y="0.0" width="500" height="339"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
