--- a/ToyProjectManagementApp/Views/ProjectContent.storyboard
+++ b/ToyProjectManagementApp/Views/ProjectContent.storyboard
@@ -93,10 +93,10 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="8cM-Lj-T8c">
-                                <rect key="frame" x="0.0" y="775.66666666666663" width="390" height="34.333333333333371"/>
+                                <rect key="frame" x="0.0" y="761" width="390" height="49"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uw9-5R-07c">
-                                        <rect key="frame" x="0.0" y="0.0" width="97.666666666666671" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="97.666666666666671" height="49"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="arrowshape.left.fill" catalog="system">
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -106,7 +106,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JvD-SI-1wR">
-                                        <rect key="frame" x="97.666666666666686" y="0.0" width="97.333333333333314" height="34.333333333333336"/>
+                                        <rect key="frame" x="97.666666666666686" y="0.0" width="97.333333333333314" height="49"/>
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="gearshape.fill" catalog="system"/>
@@ -114,11 +114,16 @@
                                             <action selector="showSideBar:" destination="gsB-19-J9G" eventType="touchUpInside" id="VHp-5y-bRj"/>
                                         </connections>
                                     </button>
-                                    <colorWell contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="fo3-ZC-94j">
-                                        <rect key="frame" x="195" y="0.0" width="97.666666666666686" height="34.333333333333336"/>
-                                    </colorWell>
+                                    <button opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZ1-rh-lFe">
+                                        <rect key="frame" x="195" y="0.0" width="97.666666666666686" height="49"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="rainbowCircle"/>
+                                        <connections>
+                                            <action selector="tabProjectColorCotentButton:" destination="gsB-19-J9G" eventType="touchUpInside" id="JpP-mG-9sW"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzS-g3-tVP">
-                                        <rect key="frame" x="292.66666666666669" y="0.0" width="97.333333333333314" height="34.333333333333336"/>
+                                        <rect key="frame" x="292.66666666666669" y="0.0" width="97.333333333333314" height="49"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="arrowshape.right.fill" catalog="system" title="">
                                             <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -130,7 +135,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Rb-YF-Pf6">
-                                <rect key="frame" x="0.0" y="230" width="390" height="531.66666666666663"/>
+                                <rect key="frame" x="0.0" y="230" width="390" height="517"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <sections/>
                                 <connections>
@@ -192,6 +197,7 @@
         <image name="arrowshape.right.fill" catalog="system" width="128" height="104"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
+        <image name="rainbowCircle" width="35" height="35"/>
         <namedColor name="primaryColor">
             <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
